<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.modules.auth.login.LoginActivity">

    <data>

        <variable
            name="mViewModel"
            type="com.amali.ui.home.donation.DonationViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_smoke">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_16sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/img_athletes_man" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtDonorsCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="start"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="end"
                        android:text="@string/donors"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtFundRaised"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="start"
                        android:text="@string/zero"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="end"
                        android:text="@string/raised_ksh"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/colorPrimary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/goal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDaysLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/days_left"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUploadVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_50ssp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/btn_green_rounded_solid"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:onClick="@{mViewModel::makeDonation}"
                    android:paddingHorizontal="@dimen/_40sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    android:text="@string/make_donation"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>