<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.modules.auth.login.LoginActivity">

    <data>

        <variable
            name="mViewModel"
            type="com.amali.ui.auth.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_90sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/kindly_tell_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbAthlete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llAthlete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_role_un_select"
                        android:onClick="onClickAthlete"
                        android:orientation="vertical"
                        android:padding="@dimen/_15sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtAthleteTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_extra_bold"
                            android:text="@string/athlete"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_16ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtAthleteDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/an_athlete_is"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbFan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llFan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_role_un_select"
                        android:onClick="onClickFan"
                        android:orientation="vertical"
                        android:padding="@dimen/_15sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtFanTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_extra_bold"
                            android:text="@string/fan"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_16ssp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtFanDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/a_fan_is"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30ssp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green_rounded_corner"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:onClick="onClickBack"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/back"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_13ssp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_30ssp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_green_rounded_solid"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:onClick="onClickNext"
                        android:paddingVertical="@dimen/_5sdp"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</layout>